[package]
name = "pcutil"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/cupcee/pcutil"
rust-version = "1.86"
authors = ["Samuel Piirainen <samuel.piirainen@gmail.com>"]
description = ""
license = "MIT"

[dependencies]
anyhow = "1.0.91"
clap = { version = "4.4.7", features = ["derive"] }
rayon = "1.10.0"
walkdir = "2.4.0"
pasture-io = "0.5.0"
pasture-core = "0.5.0"
pcd-rs = { version = "0.12.0", features = ["derive"] }
bytemuck = "1.20.0"
itertools = "0.13.0"
indicatif = { version = "0.17.11", features = ["rayon"] }
rand = { version = "0.9.1", features = ["small_rng"] }
qhull = "0.3.0"
termimad = "0.31.3"
colored = "3.0.0"
rerun = "0.24.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_yaml = "0.9.34"
dirs = "6.0.0"

[dev-dependencies]
uuid = { version = "1.0", features = ["v4"] }

[profile.release]
lto = true
